      will not encounter this as it is single threaded for working tree
      operations. (Robert Collins)

    * The C extensions now build on python 2.4 (Robert Collins, #271939)

  BUG FIXES:

    * Branching from a shared repository on a smart server into a new
      repository now preserves the repository format.
      (Andrew Bennetts, #269214)

    * ``bzr missing`` now accepts an ``--include-merges`` option.
      (Vincent Ladeuil, #233817)

    * Don't try to filter (internally) '.bzr' from the files to be deleted if
      it's not there.
      (Vincent Ladeuil, #272648)

    * Fix '_in_buffer' AttributeError when using the -Dhpss debug flag.
      (Andrew Bennetts)

    * Fix TooManyConcurrentRequests errors caused by a connection failure
      when doing ``bzr pull`` or ``bzr merge`` from a ``bzr+ssh`` URL.
      (Andrew Bennetts, #246233)

    * Fixed ``bzr st -r branch:PATH_TO_BRANCH`` where the other branch
      is in a different repository than the current one.
      (Lukáš Lalinský, #144421)

    * Make the first line of the manpage preamble a comment again.
      (David Futcher, #242106)

  DOCUMENTATION:

    * Explain revision/range identifiers. (Daniel Clemente)

  API CHANGES:

  TESTING:

    * ``bzrlib.tests.repository_implementations`` has been renamed to
      ``bzrlib.tests.per_repository`` so that we have a common structure
      (and it is shorter). (John Arbash Meinel, #239343)

    * ``LocalTransport.abspath()`` now returns a drive letter if the
      transport has one, fixing numerous tests on Windows.
      (Mark Hammond)

    * The full test suite is passing again on OSX.
      (Guillermo Gonzalez, Vincent Ladeuil)

    * PreviewTree is now tested via intertree_implementations.
      (Aaron Bentley)

  INTERNALS:

    * A new hook, ``Branch.open``, has been added, which is called when
      branch objects are opened. (Robert Collins)

    * ``bzrlib.osutils._walkdirs_utf8`` has been refactored into common